--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -38,20 +38,20 @@
         android:layout_height="257dp"
         android:layout_gravity="center"
         android:src="@drawable/dog1"
-        app:civ_border_color="@color/colorPrimary"
-        app:civ_border_width="4dp"
+        app:civ_border_color="@color/white"
+        app:civ_border_width="10dp"
 
         android:layout_weight="0.18"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/level_desc"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <!-->
     <RatingBar
@@ -94,18 +94,40 @@
         app:layout_constraintTop_toBottomOf="@+id/pet_round_image" />
 
     <Button
+        android:id="@+id/change_pet_image"
+
+        android:text="@string/change_pet_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="casual"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:background="@color/colorPrimaryDark"
+        android:textSize="10dp"
+        android:padding="5dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/level_desc"
+        app:layout_constraintBottom_toBottomOf="@+id/level_desc"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintVertical_bias="0.571"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
+    <Button
         android:id="@+id/level_button"
 
-        android:layout_width="86dp"
+        android:layout_width="80dp"
         android:layout_height="80dp"
         android:fontFamily="casual"
         android:textColor="@color/white"
+        android:textStyle="bold"
         android:textSize="40sp"
         android:background="@drawable/round_button"
 
         app:layout_constraintBottom_toBottomOf="@+id/pet_round_image"
-        android:layout_marginBottom="0dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/pet_round_image" />
+        app:layout_constraintRight_toRightOf="@+id/pet_round_image"
+        android:layout_marginEnd="8dp" />
 
 </android.support.constraint.ConstraintLayout>
