--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#c20586">
+    android:color="@color/colorPrimaryLight">
+
     <item>
         <shape android:shape="oval">
             <solid android:color="@color/colorPrimary"/>
