--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,13 +9,13 @@
 
     tools:context="jessicamatheus.petproject.HomeActivity"
     android:weightSum="1">
-    <!--
+
     <TextView
         android:id="@+id/titulo_inicio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="casual"
-        android:text="PERFIL"
+        android:text="@string/pet_name"
         android:textColor="@color/colorPrimary"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -29,7 +29,7 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp" />
-        -->
+
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/pet_round_image"
@@ -93,27 +93,6 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/pet_round_image" />
 
-    <Button
-        android:id="@+id/change_pet_image"
-
-        android:text="@string/change_pet_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="casual"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:background="@color/colorPrimaryDark"
-        android:textSize="10dp"
-        android:padding="5dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/level_desc"
-        app:layout_constraintBottom_toBottomOf="@+id/level_desc"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.571"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
     <Button
         android:id="@+id/level_button"
 
