--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,10 +16,11 @@
         android:layout_height="wrap_content"
         android:fontFamily="casual"
         android:text="@string/pet_name"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:paddingTop="20dp"
 
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -119,22 +120,5 @@
         android:layout_marginBottom="-20dp"
         android:layout_marginRight="-46dp"
         app:layout_constraintRight_toRightOf="@+id/frameLayout" />
-
-    <SeekBar
-        android:id="@+id/seekBar"
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:max="10"
-        android:progress="3"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/level_desc"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
-
 
 </android.support.constraint.ConstraintLayout>
