--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -83,7 +83,9 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titulo_inicio">
+        app:layout_constraintTop_toBottomOf="@+id/titulo_inicio"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/pet_round_image"
@@ -99,12 +101,11 @@
             android:layout_height="match_parent"
             app:background_progressbar_color="@color/transparent"
             app:background_progressbar_width="0dp"
-            app:progress="0"
             app:progressbar_color="@color/colorPrimaryDark"
             app:progressbar_width="10dp" />
 
-    </FrameLayout>
 
+    </FrameLayout>
     <Button
         android:id="@+id/level_button"
 
@@ -117,8 +118,6 @@
         android:background="@drawable/round_button"
 
         app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
-        android:layout_marginBottom="-20dp"
-        android:layout_marginRight="-46dp"
         app:layout_constraintRight_toRightOf="@+id/frameLayout" />
 
 </android.support.constraint.ConstraintLayout>
