--- a/app/src/main/res/layout/petinterface.xml
+++ b/app/src/main/res/layout/petinterface.xml
@@ -3,42 +3,80 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryLighter">
+<!--
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/pet_round_image"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:src="@drawable/dog1"
+        app:civ_border_color="@color/white"
+        app:civ_border_width="10dp"
+
+        android:paddingTop="50dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
+
     <com.mikhaellopez.circularprogressbar.CircularProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/dog1"
-        app:background_progressbar_color="@color/colorPrimaryLight"
-        app:background_progressbar_width="5dp"
+        android:id="@+id/level_progress"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        app:background_progressbar_color="@color/transparent"
+        app:background_progressbar_width="0dp"
+        app:progress="0"
         app:progressbar_color="@color/colorPrimaryDark"
         app:progressbar_width="10dp"
-        app:progress="60"/>
+
+
+        android:paddingTop="20dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ACCEPT"
+        android:id="@+id/buttonAccept"
         android:fontFamily="casual"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:background="@drawable/button_corners"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/level_progress"
+        android:layout_marginBottom="0dp"
+        android:layout_marginRight="30dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/level_progress" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DENY"
+        android:id="@+id/buttonDeny"
         android:fontFamily="casual"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:background="@drawable/button_corners"
-        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/level_progress"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
-
+        android:layout_marginLeft="30dp"
+        app:layout_constraintBottom_toBottomOf="@+id/level_progress"
+        android:layout_marginBottom="0dp" />
+-->
 
 </android.support.constraint.ConstraintLayout>
 
